# Module.Math

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: autobuild.yml  build-linux.yml  build-windows.yml
CMake/: Configure.cmake  Globals.cmake
Math/: BoundingBox.cpp  BoundingBox.h  BoundingSphere.cpp  BoundingSphere.h  Box2d.cpp  Box2d.h  Box3d.cpp  Box3d.h  CMakeLists.txt  Color.cpp  Color.h  Config.h  Config.h.in  Mat3.cpp  Mat3.h  Mat4.cpp  Mat4.h  Math.cpp  Math.h  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  Plane.cpp  Plane.h  Print.cpp  Print.h  Quat.cpp  Quat.h  Quaternion.cpp  Quaternion.h  Rand.cpp  Rand.h  Random.cpp  Random.h  Ray.cpp  Ray.h  Rect.cpp  Rect.h  Rectangle.cpp  (+17 more)
Test/: CMakeLists.txt  Test1.cpp
